--- a/package.json
+++ b/package.json
@@ -4,18 +4,25 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "npx webpack serve --mode=development",
+    "build": "webpack --mode=production",
+    "build:dev": "webpack"
   },
   "author": "pengin",
   "license": "UNLICENSE",
   "private": true,
   "devDependencies": {
+    "@babel/core": "^7.12.10",
+    "@babel/preset-env": "^7.12.11",
+    "babel-loader": "^8.2.2",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^5.0.1",
     "html-webpack-plugin": "^5.0.0-beta.5",
+    "image-webpack-loader": "^7.0.1",
     "mini-css-extract-plugin": "^1.3.4",
     "style-loader": "^2.0.0",
     "webpack": "^5.15.0",
-    "webpack-cli": "^4.3.1"
+    "webpack-cli": "^4.10.0",
+    "webpack-dev-server": "^3.11.2"
   }
 }
